# Adaptable-Player-Server

./: CMakeLists.txt
include/api/: ApplicationProtocolBase.h  KcpServer.h  TcpServer.h
include/asio/: CMakeLists.txt
include/asio2/: CMakeLists.txt
include/detail/: error_handler.h  type_definer.hpp
libs/: kcp.lib
src/: CMakeLists.txt  Connection.hpp  main.cpp  test.h  type_definer.hpp
src/error/: error_handler.cpp
src/example/: Connection.hpp  main.cpp
src/example/ExampleApplicationProtocol/: EP.cpp  EP.h  UrlMap.hpp  Views.cpp  Views.hpp
src/kcp/: KcpServer.cpp  KcpServer.h
src/kcp/response/: UrlMap.hpp  Views.hpp
src/response/: UrlMap.hpp  Views.cpp  Views.hpp
src/tcp/: TcpServer.cpp
